Extend test, reformatting